insert href link in navbar

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 <body>
     <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
         <!-- Navbar content -->
-        <a class="navbar-brand">
+        <a class="navbar-brand" href="https://www.nasa.gov/">
             <img src="/NASA_logo.png" width="50" height="40" class="d-inline-block align-top" alt="">
-            <span class="align-middle">International Space Station</span>
+            <span class="align-middle" style="color: #0B3D91;">International Space Station</span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +48,7 @@
                     <a class="nav-link" href="index.html">ISS Location <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">People on ISS</a>
+                    <a class="nav-link" href="people.html">People on ISS</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
